--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,16 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+api.js
+api
+/singleTypes
+singleTypesApi.js
+singleTypesApi
+
+Carousel.jsx
+Carousel
+Carousel.css
+
+yedek.txt
 # dependencies
 /node_modules
 /.pnp
