--- a/package.json
+++ b/package.json
@@ -13,20 +13,20 @@
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.3",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "express": "^4.19.2",
     "mdb-react-ui-kit": "^7.2.0",
+    "next": "14.2.3",
+    "react": "^18",
     "react-bootstrap": "^2.10.2",
+    "react-dom": "^18",
     "react-twitter-embed": "^4.0.4"
   },
   "devDependencies": {
+    "eslint": "^8.57.0",
+    "eslint-config-next": "14.2.3",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.3"
+    "tailwindcss": "^3.4.1"
   }
 }
